[gd_scene load_steps=5 format=3 uid="uid://dyaf0tlbme54h"]

[ext_resource type="Texture2D" uid="uid://fcmwxkf730l7" path="res://icon.svg" id="1_2ba02"]
[ext_resource type="Script" uid="uid://bvwn4ig5sdpa8" path="res://world/cats/cat.gd" id="1_27gdd"]
[ext_resource type="PackedScene" uid="uid://bih4u8iltnmp8" path="res://components/interact_component.tscn" id="2_27gdd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b3831"]
radius = 23.0

[node name="Cat" type="Node2D"]
z_index = 2
script = ExtResource("1_27gdd")

[node name="CatSprite" type="Sprite2D" parent="."]
position = Vector2(0, 0.99999994)
scale = Vector2(1, 0.5)
texture = ExtResource("1_2ba02")

[node name="InteractComponent" parent="." node_paths=PackedStringArray("interactable_node") instance=ExtResource("2_27gdd")]
interactable_node = NodePath("..")

[node name="InteractCollider" type="CollisionShape2D" parent="InteractComponent"]
shape = SubResource("CircleShape2D_b3831")
